release 1.7
- *Breaking change*: Added support for 2-legged OAuth in oauth-server module. As a result, 2 new methods were added to the OAuthConsumer interface: getPrincipal() and isInRole() - these are used by the security context in case of 2-legged oauth (i.e. no token in the oauth header). Existing users of the previous versions of the oauth-server module should add a simple implementation of getPrincipal() always returning null to their impl. of the OAuthConsumer interface, and an implementation of isInRole() method always returning false.
- Fixed issue 721
  http://java.net/jira/browse/JERSEY-721
  NullPointerException during WADL generation with @Autowired Spring beans
- Fixed issue 709
  http://java.net/jira/browse/JERSEY-709
  Avoid throwing RuntimeException eagerly when oauth-server.jar on the classpath but no OAuthProvider is registered.  
- Fixed issue 713
  http://java.net/jira/browse/JERSEY-713
  UserGuide docs typo.
- Fixed issue 712
  http://java.net/jira/browse/JERSEY-712
  Document cobertura profile usage in samples
- Fixed issue 704
  http://java.net/jira/browse/JERSEY-704
  Typo.
- Fixed issue 696
  http://java.net/jira/browse/JERSEY-696
  add missing dependency to pom.xml when sun-web.xml <class-loader delegate="false"/>
- Fixed issue 694
  http://java.net/jira/browse/JERSEY-694
  Typo.
- Fixed issue 693
  http://java.net/jira/browse/JERSEY-693
  Javadoc typos.
- Fixed issue 668
  http://java.net/jira/browse/JERSEY-668
  Removed duplicate copy of form.html in simple-console Jersey example

release 1.6 (03-2011)
- Added support for lists and arrays of JAXBElement<?> objects.
- Fixed issue 681
  http://java.net/jira/browse/JERSEY-681
  Missing repository declaration in quickstart-grizzly archetype
- Grizzly 2.0 integration
  Introduced GrizzlyWebContainerFactory in jersey-grizzly2
  Introduced jersey-tests-framework-grizzly2 and made it default
  option in test framework.
  Changed (almost) all samples to use jersey-grizzly2 for test/run.